--- a/style-exe-function.css
+++ b/style-exe-function.css
@@ -147,6 +147,9 @@ footer {
     select#flista{
         margin-top: 1rem; 
         font-size: clamp(1.75em, 1rem, 1vw, 1.25em);
+        min-width: 20vw;
+        min-height: 20vh;
+        
        
     }
 
